FIND_PACKAGE(Box2D)
IF(BOX2D_FOUND)
    ADD_SUBDIRECTORY(2DPhysics)
ENDIF(BOX2D_FOUND)

# Note that FindBullet requires CMake >= 2.8.4 to find Bullet >= 2.77 
# due to Bullet's header install directory location changing.
FIND_PACKAGE(Bullet)
IF(BULLET_FOUND)
    ADD_SUBDIRECTORY(3DPhysics)
ENDIF(BULLET_FOUND)
 
FIND_PACKAGE(Freenect)
IF(FREENECT_FOUND)
    ADD_SUBDIRECTORY(Kinect)
ENDIF(FREENECT_FOUND)
 
ADD_SUBDIRECTORY(UI)

IF (NOT MINGW)
ADD_SUBDIRECTORY(TUIO)
ENDIF(NOT MINGW)